# Sedulous-Serenity

./: .gitignore  README.md  agents.md
Code/: BeefSpace.toml
Code/Dependencies/Dxc-Beef/: BeefSpace.toml
Code/Dependencies/SDL3-Beef/: BeefProj.toml
Code/Dependencies/SDL3_image-Beef/: BeefProj.toml
Code/Dependencies/SDL3_mixer-Beef/: BeefProj.toml  README.md
Code/Dependencies/Win32-Beef/: BeefSpace.toml
Code/Dependencies/cgltf-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  cgltf_stub.c
Code/Dependencies/cgltf-Beef/cgltf/: .githash.txt
Code/Dependencies/cgltf-Beef/cgltf-Beef-Test/: BeefProj.toml
Code/Dependencies/cgltf-Beef/cgltf-Beef-Test/src/: Program.bf
Code/Dependencies/cgltf-Beef/src/: CGLTF.bf
Code/Dependencies/dr_libs-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  dr_flac_stub.c  dr_mp3_stub.c  dr_wav_stub.c
Code/Dependencies/dr_libs-Beef/dr_libs/: git-hash.txt
Code/Dependencies/dr_libs-Beef/src/: dr_flac.bf  dr_mp3.bf  dr_wav.bf
Code/Dependencies/joltc-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1
Code/Dependencies/joltc-Beef/joltc/: githash.txt
Code/Dependencies/joltc-Beef/src/: JoltC.bf
Code/Dependencies/stb_truetype-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  stb_truetype_stub.c
Code/Dependencies/stb_truetype-Beef/src/: stb_truetype.bf
Code/Dependencies/stb_vorbis-Beef/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build-native.ps1  stb_vorbis_stub.c
Code/Dependencies/stb_vorbis-Beef/src/: stb_vorbis.bf
Code/Editor/Sedulous.Editor.App/: BeefProj.toml
Code/Editor/Sedulous.Editor.Core/: BeefProj.toml
Code/Editor/Sedulous.Editor.Runner/: BeefProj.toml
Code/Games/ImpactArena/: BeefProj.toml  FrameworkIssues.md
Code/Games/TowerDefense/: BeefProj.toml
Code/Release/: BeefSpace.toml
Code/Samples/AudioSample/: BeefProj.toml  README.md
Code/Samples/DrawingSandbox/: BeefProj.toml
Code/Samples/EngineAudio/: BeefProj.toml
Code/Samples/EngineInput/: BeefProj.toml
Code/Samples/EnginePhysics/: BeefProj.toml
Code/Samples/FontRendering/: BeefProj.toml
Code/Samples/FrameworkNavigation/: BeefProj.toml
Code/Samples/FrameworkRender/: BeefProj.toml
Code/Samples/FrameworkSandbox/: BeefProj.toml
Code/Samples/PhysicsSandbox/: BeefProj.toml
Code/Samples/RHI.SampleFramework/: BeefProj.toml
Code/Samples/RHIBindGroups/: BeefProj.toml  README.md
Code/Samples/RHIBlending/: BeefProj.toml  README.md
Code/Samples/RHIBlit/: BeefProj.toml  README.md
Code/Samples/RHIBorderSampler/: BeefProj.toml  README.md
Code/Samples/RHICompute/: BeefProj.toml  README.md
Code/Samples/RHIDepthBuffer/: BeefProj.toml  README.md
Code/Samples/RHIInstancing/: BeefProj.toml  README.md
Code/Samples/RHIMRT/: BeefProj.toml  README.md
Code/Samples/RHIMSAA/: BeefProj.toml  README.md
Code/Samples/RHIMipmaps/: BeefProj.toml  README.md
Code/Samples/RHIQueries/: BeefProj.toml  README.md
Code/Samples/RHIReadback/: BeefProj.toml  README.md
Code/Samples/RHITexturedQuad/: BeefProj.toml  README.md
Code/Samples/RHITriangle/: BeefProj.toml  README.md
Code/Samples/RHIWireframe/: BeefProj.toml  README.md
Code/Samples/RenderSandbox/: BeefProj.toml
Code/Samples/RendererAsset/: BeefProj.toml
Code/Samples/RendererGeometry/: BeefProj.toml  README.md
Code/Samples/RendererIntegrated/: BeefProj.toml  README.md
Code/Samples/RendererLighting/: BeefProj.toml  README.md
Documentation/: Audio.md  Drawing.md  Fonts.md  Geometry.md  Mathematics.md  Physics.md  RHI.md  Renderer.md  Resources.md  Serialization.md  UI.md
Documentation/Engine/: Audio.md  Input.md  Physics.md  Renderer.md  UI.md
Documents/: Drawing.md  JobSystem.md  Models.md  Serialization.md  Shell.md
NGAssets/shaders/: common.hlsli  mesh.frag.hlsl  mesh.vert.hlsl  particle.frag.hlsl  particle.vert.hlsl  shadow.vert.hlsl  shadows.hlsli  skybox.frag.hlsl  skybox.vert.hlsl  sprite.frag.hlsl
assets/cache/: Fox.skinnedmesh
(+1828 files in other folders)
